--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -3,7 +3,7 @@
         "welcome": "Welcome to the best library",
         "button": "Button",
         "properties": "Properties",
-        "documentation": "Documentation",
+        "discovery": "Discovery",
         "favorite": "favorite"
     }
 }
