--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -4,6 +4,7 @@
         "button": "Button",
         "properties": "Properties",
         "discovery": "Discovery",
-        "favorite": "favorite"
+        "favorite": "favorite",
+        "cat": "cat"
     }
 }
