--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -4,7 +4,5 @@
         "button": "Button",
         "properties": "Properties",
         "discovery": "Discovery",
-        "favorite": "favorite",
-        "cat": "cat"
-    }
+        "favorite": "favorite"    }
 }
