--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -4,7 +4,6 @@
         "button": "Botão",
         "properties": "Propriedades",
         "documentation": "Documento",
-        "favorite": "favorito",
-        "cat": "Gato"
+        "favorite": "favorito"
     }
 }
