--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -4,5 +4,7 @@
         "button": "Button",
         "properties": "Properties",
         "discovery": "Discovery",
-        "favorite": "favorite"    }
+        "favorite": "Favorite",
+        "event": "Event"    
+    }
 }
