--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -5,6 +5,7 @@
         "properties": "Propriedades",
         "documentation": "Documento",
         "favorite": "favorito",
-        "event": "evento" 
+        "event": "evento", 
+        "robot": "Robô"
     }
 }
