--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -4,8 +4,6 @@
         "button": "Button",
         "properties": "Properties",
         "discovery": "Discovery",
-        "favorite": "Favorite",
-        "event": "Event",
-        "robot": "Robot"  
+        "favorite": "Favorite"
     }
 }
