--- a/src/i18n/translations/ptBR.json
+++ b/src/i18n/translations/ptBR.json
@@ -4,6 +4,7 @@
         "button": "Botão",
         "properties": "Propriedades",
         "documentation": "Documento",
-        "favorite": "favorito"
+        "favorite": "favorito",
+        "image": "Imagem"
     }
 }
