--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -5,6 +5,7 @@
         "properties": "Properties",
         "discovery": "Discovery",
         "favorite": "Favorite",
-        "image": "Image"
+        "image": "Image",
+        "sunday": "Sunday"
     }
 }
