--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -6,6 +6,7 @@
         "discovery": "Discovery",
         "favorite": "Favorite",
         "image": "Image",
-        "sunday": "Sunday"
+        "sunday": "Sunday",
+        "monday": "Monday"
     }
 }
